synapse/Deployment-synapse.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: synapse
  name: synapse
  namespace: communications
spec:
  minReadySeconds: 10
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: synapse
  template:
    metadata:
      annotations:
        reloader.stakater.com/auto: "true"
      labels:
        name: synapse
    spec:
      containers:
      - env:
        - name: SYNAPSE_CONFIG_PATH
          value: /config/homeserver.yaml
        image: ghcr.io/element-hq/synapse:v1.162.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /_matrix/client/versions
            port: 8008
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 30
          timeoutSeconds: 5
        name: synapse
        ports:
        - containerPort: 8008
          name: http
        - containerPort: 9090
          name: metrics
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /_matrix/client/versions
            port: 8008
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
        startupProbe:
          failureThreshold: 30
          httpGet:
            path: /_matrix/client/versions
            port: 8008
            scheme: HTTP
          periodSeconds: 10
          timeoutSeconds: 5
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /keys/signing.key
          name: signing-key-sealed-secret
          subPath: signing.key
        - mountPath: /appservice
          name: appservice
        - mountPath: /media
          name: media
        - mountPath: /data
          name: data
      enableServiceLinks: false
      volumes:
      - configMap:
          name: synapse-homeserver-tpl
        name: synapse-homeserver-tpl
      - configMap:
          name: synapse-registration-tpl
        name: synapse-registration-tpl
      - emptyDir: {}
        name: config
      - emptyDir: {}
        name: appservice
      - name: signing-key-sealed-secret
        secret:
          secretName: signing-key-sealed-secret
      - hostPath:
          path: /cold-data/synapse/media
        name: media
      - emptyDir: {}
        name: data
