synapse/Service-synapse.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/path: /metrics
    prometheus.io/port: "9090"
    prometheus.io/scrape: "true"
  labels:
    app: synapse
    name: synapse
  name: synapse
  namespace: communications
spec:
  ports:
  - name: synapse-http
    port: 8008
    targetPort: 8008
  - name: synapse-metrics
    port: 9090
    targetPort: 9090
  selector:
    name: synapse
